--- a/style.css
+++ b/style.css
@@ -14,19 +14,19 @@ nav {
     opacity: 0.7;
     position: fixed;
     width: 100vw;
+    
 }
 
-#nav-left {
+#nav-left ul {
     list-style: none;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    flex-grow: 2;
     width: 50vw;
     
 }
 
-#nav-right {
+#nav-right ul {
     list-style: none;
     display: flex;
     flex-direction: row;
@@ -57,6 +57,7 @@ a:hover {
    text-shadow: 3px 3px darkorange;
    scroll-behavior: smooth;
    transition: 0.4s;
+   background-color: black;
 }
 
 
@@ -79,10 +80,11 @@ a:hover {
     width: 50vw;
     background-size: cover;
     justify-content: flex-end;
+    margin-top: 55px;
+    
 }
 
 h1 {
-    /* z-index: 1; */
     font-size: 11rem;
     font-weight: 900;
     color: darkorange;
